prodMetadata/src/objects/Process__c.object
<CustomObject>
    <fields>
        <fullName>Adopted__c</fullName>
        <label># Adopted</label>
        <summaryFilterItems>
            <field>Process_Knowledge__c.Level_of_Expertise__c</field>
            <operation>equals</operation>
            <value>Pass, Super user</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Process_Knowledge__c.userIsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Process_Knowledge__c.Process__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Testing_Form_URL__c</fullName>
        <label>Testing Form URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Training_Document_URL__c</fullName>
        <label>Training Document URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Users__c</fullName>
        <label># Users</label>
        <summaryFilterItems>
            <field>Process_Knowledge__c.userIsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Process_Knowledge__c.Process__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>IsActive__c</columns>
        <columns>Adopted__c</columns>
        <columns>Users__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>